<resources>
    <string name="app_name">Meridian</string>

    <!-- Snackbar -->
    <string name="snackbar_no_connection_rationale">No internet connection</string>
    <string name="snackbar_load_error_rationale">Can not get articles</string>
    <string name="retry">Retry</string>

    <!-- Button -->
    <string name="button_label_article_read_more">Read More</string>

    <!-- MenuItem -->
    <string name="menuitem_refresh">Refresh</string>

    <!-- ChipGroup -->
    <string name="chip_group_description_tags">Tags</string>

    <!-- Navigation drawer -->
    <string name="nav_front">Front</string>
    <string name="nav_world">World</string>
    <string name="nav_us">US</string>
    <string name="nav_politics">Politics</string>
    <string name="nav_business">Business</string>
    <string name="nav_technology">Technology</string>
    <string name="nav_tech">Tech</string>
    <string name="nav_science">Science</string>
    <string name="nav_sports">Sports</string>
    <string name="nav_food">Food</string>
    <string name="nav_travel">Travel</string>

    <!-- ImageView -->
    <string name="content_description_image_article">Article image</string>
    <string name="content_description_image_article_entry">Article listing image</string>

</resources>
