<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_front"
            android:title="@string/nav_front"/>
        <item android:id="@+id/nav_world"
            android:title="@string/nav_world"/>
        <item android:id="@+id/nav_us"
            android:title="@string/nav_us" />
        <item android:id="@+id/nav_politics"
            android:title="@string/nav_politics" />
        <item android:id="@+id/nav_business"
            android:title="@string/nav_business" />
        <item android:id="@+id/nav_tech"
            android:title="@string/nav_technology"
            android:titleCondensed="@string/nav_tech"/>
        <item android:id="@+id/nav_science"
            android:title="@string/nav_science" />
        <item android:id="@+id/nav_sports"
            android:title="@string/nav_sports" />
        <item android:id="@+id/nav_food"
            android:title="@string/nav_food" />
        <item android:id="@+id/nav_travel"
            android:title="@string/nav_travel" />
    </group>
</menu>